Frontend static resource update

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Elastic Data Assistant is a web-based tool for interacting with Elasticsearch, providing a chat interface and query editor for data exploration."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
